tests/chapter_17/valid/void/cast_to_void.c
int main(void) {
    (void) 100;
    return 0;
}