tests/chapter_17/invalid_types/incomplete_types/sizeof_void_expression.c
int main(void) {
  int x;
  return sizeof((void)x);
}